--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@skyway-sdk/room": "^1.15.1",
     "uuidv4": "^6.2.13",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-toast-notification": "^3.1.3",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
